samples/_failures_safe/1761169012_37fa8f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b993b81b.c: In function ‘main’:
./samples/SAFE/__tmp_b993b81b.c:173:9: error: expected declaration or statement at end of input
  173 |         k++;
      |         ^
./samples/SAFE/__tmp_b993b81b.c:173:9: error: expected declaration or statement at end of input
